Revision history for {{$dist->name}}:

{{$NEXT}}

v0.13.0   2025-05-09 18:22:33+01:00 Europe/London
  [Enhancements]
  - The misc_extensions rule now blocks .dist, .env, .lck, .lock,
    .sav, .save, .swp, .swap, .tmp, .temp, and .yaml files.

  - Added Swagger files to the cms_prefixes rule.

  - Added the config_scripts rule.

  [Documentation]
  - Added a How to Contribute document.

  - Updated the security policy.

  - Fixed minor typos.

  [Tests]
  - Added more author tests.

v0.12.1   2025-04-13 14:01:21+01:00 Europe/London
  [Documentation]
  - Added a security policy.

  - Updated the Perl version support policy.

  - Updated the copygiht year.

  [Tests]
  - Switched package used for the release manifest.

v0.12.0   2024-03-13 17:03:24+00:00 Europe/London
  [Exhancements]
  - Added the script_injection rule.

  [Documentation]
  - Bumped copyright year.

v0.11.1   2023-10-28 08:43:52+01:00 Europe/London
  [Tests]
  - Migrated to Test2.

v0.11.0   2023-08-03 17:29:24+01:00 Europe/London
  [Exhancements]
  - Added the exchange_prefixes rule.

  [Documentation]
  - Support policy for older Perls is documented.

v0.10.1   2023-05-06 11:18:22+01:00 Europe/London
  [Exhancements]
  - Added .c and .cc to the script_extensions rule.

  [Documentation]
  - Fixed typos in POD.

v0.10.0   2023-02-22 10:56:42+00:00 Europe/London
  [Exhancements]
  - Added document_extensions rule.

  - Added .rdg, .tml and .toml to the misc_extensions rule.

  - Added .csc to the script_extensions rule.

v0.9.1    2023-01-10 10:55:57+00:00 Europe/London
  No changes since v0.9.0.

v0.9.0    2023-01-05 09:27:11+00:00 Europe/London (TRIAL RELEASE)
  [Incompatible Changes]
  - Minimum Perl version is v5.14.

  [Documentation]
  - Bumped copyright year.

  - Documented support for older Perl versions.

v0.8.3    2022-12-22 14:03:34+00:00 Europe/London
  [Enhancements]
  - Added php: to the protocol_in_path_or_referer rule.

  [Documentation]
  - Added missing item to Changes for v0.8.2.