@@ -46,6 +46,7 @@ on 'develop' => sub {
   requires "Test::EOL" => "0";
   requires "Test::Kwalitee" => "1.21";
   requires "Test::MinimumVersion" => "0";
+  requires "Test::MixedScripts" => "0";
   requires "Test::More" => "0.88";
   requires "Test::NoTabs" => "0";
   requires "Test::Perl::Critic" => "0";
