@@ -41,6 +41,7 @@ Test::Vars = 0.015
 -phase = develop
 -relationship = requires
 Test::CPAN::Changes = 0
+Test::MixedScripts = 0
 Software::Security::Policy::Individual = 0.10
 
 [EnsurePrereqsInstalled]
