@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}:
 
 {{$NEXT}}
+  [Tests]
+  - Added more author tests.
 
 v0.13.0   2025-05-09 18:22:33+01:00 Europe/London
   [Enhancements]
